[package]
name = "murbul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2.4"
env_logger = "0.11.0"
imgui = "0.12.0"
sdl2 = "0.34.5"
glow = "0.13.1"
imgui-glow-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"
